@@ -10,41 +10,47 @@
 	</configSections>
 	<userSettings>
 		<MiniSqlQuery.Properties.Settings>
-			<setting name="NammedConnection" serializeAs="String">
-				<value>Default - MSSQL Master@localhost</value>
-			</setting>
-			<setting name="PlugInFileFilter" serializeAs="String">
-				<value>*.PlugIn.dll</value>
-			</setting>
-			<setting name="EnableQueryBatching" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="LoadExternalPlugins" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="DefaultConnectionDefinitionFilename" serializeAs="String">
-				<value/>
-			</setting>
-			<setting name="DateTimeFormat" serializeAs="String">
-				<value>yyyy-MM-dd HH:mm:ss.fff</value>
-			</setting>
-			<setting name="NullText" serializeAs="String">
-				<value>&lt;NULL&gt;</value>
-			</setting>
-		</MiniSqlQuery.Properties.Settings>
+   <setting name="DateTimeFormat" serializeAs="String">
+    <value>yyyy-MM-dd HH:mm:ss.fff</value>
+   </setting>
+   <setting name="DefaultConnectionDefinitionFilename" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="EnableQueryBatching" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="IncludeReadOnlyColumnsInExport" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="LoadExternalPlugins" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="NammedConnection" serializeAs="String">
+    <value>Default - MSSQL Master@localhost</value>
+   </setting>
+   <setting name="NullText" serializeAs="String">
+    <value>&lt;NULL&gt;</value>
+   </setting>
+   <setting name="PlugInFileFilter" serializeAs="String">
+    <value>*.PlugIn.dll</value>
+   </setting>
+   <setting name="CommandTimeout" serializeAs="String">
+    <value>30</value>
+   </setting>
+  </MiniSqlQuery.Properties.Settings>
 	</userSettings>
 	<!--<system.windows.forms jitDebugging="true"/>-->
 	<applicationSettings>
 		<MiniSqlQuery.Properties.Settings>
-			<setting name="FileDialogFilter" serializeAs="String">
-				<value>SQL Files (*.sql)|*.sql|Mini SQL Template Files (*.mt)|*.mt|ASPX Files (*.asp;*.aspx;*.asax;*.asmx)|*.asp;*.aspx;*.asax;*.asmx|Batch Files (*.bat;*.cmd)|*.bat;*.cmd|BOO Files (*.boo)|*.boo|Coco Files (*.atg)|*.atg|C++ Files (*.cpp;*.cc;*.c;*.h)|*.cpp;*.cc;*.c;*.h|C# Files (*.cs)|*.cs|HTML Files (*.htm*)|*.htm*|Java Files (*.java)|*.java|JavaScript Files (*.js)|*.js|Patch Files (*.patch;*.diff)|*.patch;*.diff|PHP Files (*.php*)|*.php*|TeX Files (*.tex)|*.tex|VB.NET Files (*.vb)|*.vb|XML Files (*.xml;*.resx)|*.xml;*.resx|All Files (*.*)|*.*</value>
-			</setting>
-			<setting name="XmlFileDialogFilter" serializeAs="String">
-				<value>XML Files (*.xml)|*.xml|All Files (*.*)|*.*</value>
-			</setting>
-			<setting name="SqlFileFilter" serializeAs="String">
-				<value>*.sql</value>
-			</setting>
-		</MiniSqlQuery.Properties.Settings>
+   <setting name="FileDialogFilter" serializeAs="String">
+    <value>SQL Files (*.sql)|*.sql|Mini SQL Template Files (*.mt)|*.mt|ASPX Files (*.asp;*.aspx;*.asax;*.asmx)|*.asp;*.aspx;*.asax;*.asmx|Batch Files (*.bat;*.cmd)|*.bat;*.cmd|BOO Files (*.boo)|*.boo|Coco Files (*.atg)|*.atg|C++ Files (*.cpp;*.cc;*.c;*.h)|*.cpp;*.cc;*.c;*.h|C# Files (*.cs)|*.cs|HTML Files (*.htm*)|*.htm*|Java Files (*.java)|*.java|JavaScript Files (*.js)|*.js|Patch Files (*.patch;*.diff)|*.patch;*.diff|PHP Files (*.php*)|*.php*|TeX Files (*.tex)|*.tex|VB.NET Files (*.vb)|*.vb|XML Files (*.xml;*.resx)|*.xml;*.resx|All Files (*.*)|*.*</value>
+   </setting>
+   <setting name="SqlFileFilter" serializeAs="String">
+    <value>*.sql</value>
+   </setting>
+   <setting name="XmlFileDialogFilter" serializeAs="String">
+    <value>XML Files (*.xml)|*.xml|All Files (*.*)|*.*</value>
+   </setting>
+  </MiniSqlQuery.Properties.Settings>
 	</applicationSettings>
 </configuration>
